--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1,3 +1,7 @@
+<link rel="stylesheet" href="{{ 'component-search.css' | asset_url }}" media="print" onload="this.media='all'">
+<link rel="stylesheet" href="{{ 'component-menu-drawer.css' | asset_url }}" media="print" onload="this.media='all'">
+<link rel="stylesheet" href="{{ 'component-mega-menu.css' | asset_url }}" media="print" onload="this.media='all'">
+
 <div class="header-wrapper color-{{ section.settings.color_scheme }} gradient">
   <header class="header page-width">
     {%- liquid
@@ -29,25 +33,49 @@
       {%- else -%}
         <span class="h2">{{ shop.name }}</span>
       {%- endif -%}
-      <div class="header__icons">
-        {% render 'header-search', input_id: 'Search-In-Modal' %}
+    </a>
 
-        {%- if shop.customer_accounts_enabled -%}
-          <div class="account-wrapper">
-            <legend>
-              {{ 'sections.header.account' | t }}
-            </legend>
-            <a
-              href="{%- if customer -%}{{ routes.account_url }}{%- else -%}{{ routes.account_login_url }}{%- endif -%}"
-              class="header__icon header__icon--account link focus-inset{% if section.settings.menu != blank %} small-hide{% endif %}"
-              rel="nofollow"
-            >
-              {{ 'sections.header.sign' | t }}
-            </a>
+    {%- liquid
+      if section.settings.menu != blank
+        render 'header-mega-menu'
+      endif
+    %}
+
+    <div class="header__icons">
+      {% render 'header-search', input_id: 'Search-In-Modal' %}
+
+      {%- if shop.customer_accounts_enabled -%}
+        <div class="account-wrapper">
+          <legend>
+            {{ 'sections.header.account' | t }}
+          </legend>
+          <a
+            href="{%- if customer -%}{{ routes.account_url }}{%- else -%}{{ routes.account_login_url }}{%- endif -%}"
+            class="header__icon header__icon--account link focus-inset{% if section.settings.menu != blank %} small-hide{% endif %}"
+            rel="nofollow"
+          >
+            {{ 'sections.header.sign' | t }}
+          </a>
+        </div>
+      {%- endif -%}
+
+      <a href="{{ routes.cart_url }}" class="header__icon header__icon--cart link focus-inset" id="cart-icon-bubble">
+        {% if cart == empty %}
+          <span class="svg-wrapper">{{ 'cart-icon.svg' | inline_asset_content }}</span>
+        {% else %}
+          <span class="svg-wrapper">{{ 'cart-icon.svg' | inline_asset_content }}</span>
+        {% endif %}
+        <span class="visually-hidden">{{ 'templates.cart.cart' | t }}</span>
+        {%- if cart != empty -%}
+          <div class="cart-count-bubble">
+            {%- if cart.item_count < 100 -%}
+              <span aria-hidden="true">{{ cart.item_count }}</span>
+            {%- endif -%}
+            <span class="visually-hidden">{{ 'sections.header.cart_count' | t: count: cart.item_count }}</span>
           </div>
         {%- endif -%}
-      </div>
-    </a>    
+      </a>
+    </div>    
   </header>
 </div>
 
