--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -28,7 +28,10 @@
 
     {% render 'meta-tags' %}
     
+    <script src="{{ 'constants.js' | asset_url }}" defer="defer"></script>
+    <script src="{{ 'pubsub.js' | asset_url }}" defer="defer"></script>
     <script src="{{ 'global.js' | asset_url }}" defer="defer"></script>
+    <script src="{{ 'search-form.js' | asset_url }}" defer="defer"></script>
 
     {{ content_for_header }}
 
