--- a/sections/image-banner.liquid
+++ b/sections/image-banner.liquid
@@ -53,17 +53,15 @@
               class="banner__buttons"
               {{ block.shopify_attributes }}
             >
-              {%- if block.settings.button_label_1 != blank -%}
-                <a
-                  {% if block.settings.button_link_1 == blank %}
-                    role="link" aria-disabled="true"
-                  {% else %}
-                    href="{{ block.settings.button_link_1 }}"
-                  {% endif %}
-                  class="button{% if block.settings.button_style_secondary_1 %} button--secondary{% else %} button--primary{% endif %}"
-                >
-                  {{- block.settings.button_label_1 | escape -}}
-                </a>
+              {%- if block.settings.buttons != blank -%}
+                {% for collection in block.settings.buttons %}                  
+                  <a
+                    href="{{ collection.url }}"
+                    class="button button--primary"
+                  >
+                    {{- collection.title | escape -}}
+                  </a>
+                {% endfor %}
               {%- endif -%}             
             </div>
         {%- endcase -%}
@@ -130,16 +128,9 @@
         "content": "t:sections.image-banner.blocks.buttons.settings.header_1.content"
         },
         {
-          "type": "text",
-          "id": "button_label_1",
-          "default": "t:sections.image-banner.blocks.buttons.settings.button_label_1.default",
-          "label": "t:sections.image-banner.blocks.buttons.settings.button_label_1.label",
-          "info": "t:sections.image-banner.blocks.buttons.settings.button_label_1.info"
-        },
-        {
-          "type": "url",
-          "id": "button_link_1",
-          "label": "t:sections.image-banner.blocks.buttons.settings.button_link_1.label"
+          "type": "collection_list",
+          "id": "buttons",
+          "label": "Add your collections CTA's"
         }
       ]
     }
