--- a/sections/image-with-text.liquid
+++ b/sections/image-with-text.liquid
@@ -20,7 +20,7 @@
 -%}
 
 <div class="section-{{ section.id }}-padding gradient color-{{ section.settings.section_color_scheme }}">
-  <div class="page-width">
+  <div>
     <div class="image-with-text isolate">
       <div class="image-with-text__grid grid grid--gapless grid--1-col grid--2-col-tablet">
         <div class="image-with-text__media-item grid__item">
