dual banner section

--- a/sections/image-with-text.liquid
+++ b/sections/image-with-text.liquid
@@ -19,7 +19,7 @@
   endif
 -%}
 
-<div class="section-{{ section.id }}-padding gradient color-{{ section.settings.section_color_scheme }}">
+<div class="section-{{ section.id }}-padding color-{{ section.settings.section_color_scheme }}">
   <div>
     <div class="image-with-text isolate">
       <div class="image-with-text__grid grid grid--gapless grid--1-col grid--2-col-tablet">
@@ -40,7 +40,7 @@
           </div>
         </div>
         <div class="image-with-text__text-item grid__item">
-        <div class="image-with-text__content content-container gradient color-{{ section.settings.color_scheme }}">
+        <div class="image-with-text__content content-container">
           {%- for block in section.blocks -%}
             {% case block.type %}
               {%- when 'heading' -%}
