--- a/assets/main.css
+++ b/assets/main.css
@@ -8,6 +8,52 @@
   --focused-base-box-shadow: 0 0 0 0.3rem rgb(var(--color-background)), 0 0 0.5rem 0.4rem rgba(var(--color-foreground), 0.3);
 }
 
+.relative {
+  position: relative;
+}
+
+.absolute {
+  position: absolute;
+}
+
+.inset-0 {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.z-20 {
+  z-index: 20;
+}
+
+.object-cover {
+  object-fit: cover;
+}
+
+.object-contain {
+  object-fit: contain;
+}
+
+.flex {
+  display: flex;
+}
+
+.flex-col {
+  flex-direction: column;
+}
+
+.items-center {
+  align-items: center;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.justify-between {
+  justify-content: space-between;
+}
 
 .page-width {
   max-width: var(--page-width);
@@ -759,6 +805,10 @@ h2.banner__heading {
   line-height: calc(1 + 0.1 / var(--font-body-scale));
 }
 
+.image-with-text {
+  overflow: hidden
+}
+
 .image-with-text .grid {
   margin-bottom: 0;
 }
@@ -791,6 +841,48 @@ h2.banner__heading {
   .image-with-text__media-item.grid__item {
     order: 2;
   }
+
+  .image-with-text__text-item.grid__item {
+    max-height: 38rem;
+    max-width: 65rem;
+    padding-left: 5.3rem;
+  }
+
+  .image-with-text .grid {
+    align-items: center;
+  }
+
+  .grid__item .image-with-text__content {
+    padding: 6.5rem 8.2rem;
+    background: #FFF;
+    position: absolute;
+    height: auto;
+    right: -25%;
+    box-shadow: 0px 0px 0px 30px rgba(255,255,255,1);
+    -webkit-box-shadow: 0px 0px 0px 30px rgba(255,255,255,1);
+    -moz-box-shadow: 0px 0px 0px 30px rgba(255,255,255,1);
+  }
+
+  .grid__item .image-with-text__content .image-with-text__heading {
+    font-size: 42px; 
+  }
+
+  .grid__item .image-with-text__content .image-with-text__text {
+    font-size: 16px;
+  }
+
+  .grid__item .image-with-text__content .button {
+    font-size: 14px;
+    width: auto;
+  }
+
+  .grid--2-col-tablet .image-with-text__media-item.grid__item {
+    width: calc(65% - var(--grid-desktop-horizontal-spacing) / 2);
+  }
+
+  .grid--2-col-tablet .image-with-text__text-item.grid__item {
+    width: calc(35% - var(--grid-desktop-horizontal-spacing) / 2);
+  }
 }
 
 .image-with-text__content {
@@ -800,9 +892,14 @@ h2.banner__heading {
   height: 100%;
   justify-content: center;
   align-self: center;
-  padding: 4rem calc(4rem / var(--font-body-scale)) 5rem;
+  padding: 2.5rem 2rem 3.5rem;
   position: relative;
   z-index: 1;
+  border: 2px solid #ECECEC;
+}
+
+.image-with-text__text-item {
+  padding: 2rem;
 }
 
 .image-with-text .grid__item::after {
@@ -813,4 +910,36 @@ h2.banner__heading {
   width: 100%;
   height: 100%;
   z-index: -1;
+}
+
+.image-with-text__heading {
+  margin: 0;
+  font-size: 28px;
+  font-weight: 700;
+  line-height: normal;
+  color: #141414;
+}
+
+.image-with-text__text {
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px;
+  letter-spacing: 0.875px;
+}
+
+.image-with-text__text > p {
+  color: #141414;
+  margin-bottom: 2.8rem;
+  margin-top: 1.5rem;
+}
+
+.image-with-text__content .button {
+  color: #FFF;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 28px;
+  letter-spacing: 2px;
+  width: 100%;
 }
