--- a/sections/dual-banner.liquid
+++ b/sections/dual-banner.liquid
@@ -31,7 +31,7 @@
               (min-width: 750px) calc((100vw - 130px) / 2), calc((100vw - 50px) / 2)
             {%- endcapture -%}
             {{
-              section.settings.image
+              block.settings.image
               | image_url: width: 1070
               | image_tag: sizes: sizes, widths: widths, fetchpriority: fetch_priority, class: 'dual-banner__item--img absolute inset-0 object-cover'
             }}
