--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -42,7 +42,7 @@
     %}
 
     <div class="header__icons">
-      {% render 'header-search', input_id: 'Search-In-Modal' %}
+      {% render 'header-search' %}
 
       {%- if shop.customer_accounts_enabled -%}
         <div class="account-wrapper">
