--- a/assets/main.css
+++ b/assets/main.css
@@ -240,7 +240,8 @@ header-drawer {
 }
 
 .header__search,
-.account-wrapper {
+.account-wrapper,
+.search-bar--container {
   display: none;
 }
 
@@ -255,8 +256,8 @@ header-drawer {
     line-height: 20px;
   }
 
-  .header {
-    grid-template-columns: 1fr auto 1fr;
+  header.header {
+    grid-template-columns: 1fr 3fr 2fr;
     padding: 42px 52px;
   }
 
@@ -273,6 +274,10 @@ header-drawer {
   .header__search,
   .account-wrapper {
     display: block;
+  }
+
+  .header .search-bar--container {
+    display: flex;
   }
 
   header-drawer {
@@ -348,7 +353,6 @@ header-drawer {
 .header__icons {
   display: flex;
   justify-self: end;
-  padding-right: 0.8rem;
 }
 
 .header__icon:not(.header__icon--summary),
@@ -569,7 +573,7 @@ details > * {
 }
 
 .banner__content {
-  min-height: 48rem;
+  min-height: 62rem;
   align-items: flex-end;
   justify-content: center;
 }
@@ -1028,4 +1032,57 @@ h2.banner__heading {
   .dual-banner__links {
     font-size: 14px;
   }
+
+  .icon-with-text__item.grid__item {
+    row-gap: 2.6rem;
+  }
+
+  .icon-with-text__item .icon-with-text__item--heading {
+    font-size: 20px;
+    letter-spacing: 1px;
+    line-height: 28px;
+    width: 190px;
+  }
+}
+
+.icon-with-text.grid {
+  row-gap: 4.2rem;
+}
+
+.icon-with-text__item {
+  row-gap: 1.4rem;
+}
+
+.icon-with-text__item--heading {
+  width: 140px;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 24px;
+  letter-spacing: 0.8px;  
+  text-align: center;
+}
+
+.search-bar--container {
+  /* width: 19.3rem; */
+  border-radius: 20px;
+  border: 1px solid #C4C4C4;
+  padding: 1rem 1.9rem;
+}
+
+.search-bar-input {
+  border: none;
+  background: transparent;
+  outline-width: 0px;
+  padding: 0;
+  appearance: none;
+}
+
+.search-bar-input:focus {
+  border: none;
+}
+
+.search-bar--container button[type="submit"] {
+  background: transparent;
+  border: none;
 }
